--- a/pom.xml
+++ b/pom.xml
@@ -53,6 +53,11 @@
            <artifactId>hamcrest-core</artifactId>
            <version>1.3</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-databind</artifactId>
+            <version>2.5.0</version>
+        </dependency>
         <!-- <dependency>
             <groupId>org.scribe</groupId>
             <artifactId>scribe</artifactId>
